V4 New Version !! SQLLite
New Behavior with SQLite
First Run:
On the first run, the application will create a SQLite database by processing your gamedata.json file. This initial database creation might take a few seconds (or minutes, depending on the size of your gamedata.json).
You'll see progress messages in the console as it indexes your games.
The UI will still be responsive during this process.
Subsequent Runs:
On subsequent runs, the application will check if the gamedata.json file has been modified.
If not modified, it will just use the existing SQLite database, resulting in a much faster startup.
The game list will populate quickly, and game data access will be almost instant.
Game Data Access:
The application now uses a tiered approach to getting game data:
First checks a runtime cache (fastest)
Then checks for custom controls
Then uses SQLite for lookup (very fast)
Falls back to the original methods if needed
Benefits You'll See:
Much Faster Startup: After the first run, your application will start much faster
Lower Memory Usage: Since it doesn't need to load the entire gamedata.json into memory
Faster Game Selection: Switching between games will feel more responsive
Reliable Performance: The SQLite database is optimized for quick lookups
Technical Advantages:
Indexed Access: SQLite maintains indexes that make lookups nearly instant
Smaller Memory Footprint: The app only loads the game data it needs
Persistent Cache: The database remains between app restarts
Auto-Update: The database rebuilds if gamedata.json changes
This SQLite implementation essentially creates a "compiled" version of your gamedata.json that's optimized for the kinds of lookups your application needs to do, resulting in much better performance while still maintaining all the functionality of your original code.

--- a/todo.txt
+++ b/todo.txt
@@ -14,3 +14,6 @@ Optimise
 Hotkey
 
 -hotkey to move preview screen to second screen, and/or hide so you can navigate tab menu
+
+- Logo placement for Exact Preview and save image
+I noticed image placement is not right in preview compared to when actually saved - its higher. I think this happened when I manually edited the code to lower it. Guess I missed a place to edit the new y value. 
