--- a/todo.txt
+++ b/todo.txt
@@ -1,19 +1,18 @@
-LUA
+System Fonts
+- still debug font function left. then all removed
+- add a system default for new installs, as Press Start is default
 
+Show unmatched ROMs and Find Missing Controls buttons
+-both buttons do similar things'
+-Show unmatched ROMs looks cleaner but Find Missing Controls buttons has better calls. Look into this and combine into one
+
+LUA
 -update latest mame pua to use newly created params
 -test new mame lua works as it should
 
-FONTS
-
-remove system fonts
-
-Optimise
-
--look into ijson. generate controls and standalone preview for a game without loading full json
-
 Hotkey
-
 -hotkey to move preview screen to second screen, and/or hide so you can navigate tab menu
 
+Logo
 - Logo placement for Exact Preview and save image
 I noticed image placement is not right in preview compared to when actually saved - its higher. I think this happened when I manually edited the code to lower it. Guess I missed a place to edit the new y value. 
