--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,3 @@
-Show unmatched ROMs and Find Missing Controls buttons
--both buttons do similar things'
--Show unmatched ROMs looks cleaner but Find Missing Controls buttons has better calls. Look into this and combine into one
-
 LUA
 -create new plgin that checks for version, and runs the appropriate script. This way one plugin can be created for all versions
 -update latest mame lua to use newly created params
@@ -9,3 +5,6 @@ LUA
 
 Hotkey
 -hotkey to move preview screen to second screen, and/or hide so you can navigate tab menu
+
+Bezel
+-button to add or hide bezel in preview
