--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,6 @@
+Global positions
+-global_positions_no and global_positions_no_names dont appear to have defaults - should add them global_positions does
+
 LUA
 -unified plugin does not work, and not sure it will
 -one boot lua for all mame versions, hence why plugin doesnt work. If I load it in isolation it works, but then other plugins dont load. best to leave CC Mame as is, and only work with 0.196
