Fix text placement again & move fonts and info to preview\settings
Preview = what will show running a mame ROM
Exact preview = what will show when saving an image

Currently preview is set correctly, but Exact Preview shows a little higher. need to adjust yoffset, and find a decent fix for yoffset throughout code

Also not sure if parts are using Text Format settings. All should use those, rather than hardcoded values.

--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,8 @@
+Edit Selected Game
+-it edits the db file rather than json. 
+-also noticed in edit controls section it displays what the db holds - in this case the deleted control I manually edited, but still showed contlr I "deleted" in preview.
+This means preview etc., is still using json, but analysis is using db file. Not the intended use.
+
 Global positions
 -global_positions is created by default, and no_names added if you save global with no names. Works well, but with names saves to global, but on first run, only global file exists, but defaults to no names... check logic
 
