fix info folder path for pyinstaller

--- a/todo.txt
+++ b/todo.txt
@@ -1,15 +1,3 @@
-Edit Selected Game
--it edits the db file rather than json. 
--also noticed in edit controls section it displays what the db holds - in this case the deleted control I manually edited, but still showed contlr I "deleted" in preview.
-This means preview etc., is still using json, but analysis is using db file. Not the intended use.
-
-Text Size and PLacement
--made a few changes but text size is slightly off (smaller) when saving an image.
--do I break out this image saving fuinction to a different script/app? cause confusion
-
-Global positions
--global_positions is created by default, and no_names added if you save global with no names. Works well, but with names saves to global, but on first run, only global file exists, but defaults to no names... check logic
-
 In Game Toggle
 -forgot what this does...
 
@@ -20,3 +8,5 @@ LUA
 
 Hotkey
 -hotkey to move preview screen to second screen, and/or hide so you can navigate tab menu
+
+pyinstaller --onefile --windowed --icon=MAME.ico "MAME Controls.pyw"
