Can now hide buttons
-only currently used for a few buttons, but easy enough to add using def create_button
-current buttons used are set in main init "self.show_generate_buttons = True"
-can also be set via button with "show=getattr(self, 'show_generate_buttons', True)"

--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,8 @@
-In Game Toggle
--forgot what this does...
+Show Hide buttons
+
+Prompt for game data on first run
+
+Create default png on first run
 
 LUA
 -unified plugin does not work, and not sure it will
