DB file was being rebuilt on every run
now I corrected it to only build when json been edited.

set "self._debug_data_source = True"  # Set to True for detailed data source logging

--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,5 @@
 Default font
--is set to be arial, but when opening preview an error occurs. fix
+-is set to be arial, but when opening exact preview an error occurs. Could not load font: cannot open resource. fix
 
 LUA
 -unified plugin does not work, and not sure it will
