Consistent text placement: preview, standalone, save image
think thats it...

--- a/play/todo.txt
+++ b/play/todo.txt
@@ -1,5 +1,7 @@
 preferred screen doesn't work correctly. needs args for standalone preview to overwrite json
 
+save image text is in slightly different place than preview
+
 Preview image black bars on sides
 -not covering full screen. two black bars down each side
 -saved image is 1920x994 which is why - look into this and correct
