Remove duplicate methods

--- a/play/todo.txt
+++ b/play/todo.txt
@@ -1,8 +1,10 @@
 Button frame in preview
 -not handling multiple buttons well. need to create more row if over a certain number. Or within a width range
 
-Add custom fonts
--
+Text alignment
+
+Text colour picker and gradient
+
 Move all files to preview, and preview\settings
 
 Add edit controls from previous exe
