--- a/play/todo.txt
+++ b/play/todo.txt
@@ -1,3 +1,10 @@
+Remove redundant code
+Remove multi checks for gamedata
+
+Text Settings
+-show all xinput and then normal controls sets a default font. exit, and re-enter shows correct font
+-Gradient no longer dynamically updates and have to also exit and re-enter. Sometime it works after you've done it..
+
 Add generate images from previous exe
 
 Remove redundant logo code - there's a lot. also, compare old center-left etc logo functions. They may work better.
